--- a/clientTool/lib/css/main.css
+++ b/clientTool/lib/css/main.css
@@ -3,14 +3,17 @@
 body {
     background: rgb(61, 79, 93);
     color: #fff;
-    -webkit-app-region: drag;
+    /*-webkit-app-region: drag;*/
 }
+
 
 .toolbar {
     width: 100%;
     height: 26px;
     background: #333;
-
+    position: fixed;
+    top: 0;
+    z-index: 10000;
     -webkit-app-region: drag;
 }
 
@@ -63,116 +66,53 @@ body {
     bottom: -1.5px;
 }
 
-.main {
-    margin: 2em 1.5em 0;
-    text-align: right;
+
+#layout {
+    padding-left: 150px;
+    left: 0;
+    position: relative;
 }
 
-.main .title {
-    text-transform: uppercase;
-    margin: 0;
+#menu {
+    left: 150px;
+    margin-left: -150px;
+    width: 150px;
+    position: fixed;
+    top: 26px;
+    bottom: 0;
+    overflow-y: auto;
+    background: #232432;
+    z-index: 1000;
 }
 
-.main .title .grey {
-    color: rgba(254, 254, 254, 0.15);
+#menu::-webkit-scrollbar { 
+    display: none; 
 }
 
-.main .tagline {
-    color: rgb(176, 202, 219);
-    font-weight: 300;
-    margin: 0;
-}
-
-.main .tagline a {
-    color: rgb(176, 202, 219);
-    font-weight: 300;
-    text-decoration: none;
-}
-
-.main .tagline a:hover {
-    color: white;
-}
-
-.main .nav-list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.main .nav-list .nav-item {
-    display: inline-block;
-    zoom: 1;
-    -webkit-app-region: no-drag;
-}
-
-.main .nav-list .nav-item a {
-    background: transparent;
-    border: 2px solid rgb(176, 202, 219);
+p.pure-menu-heading {
+    font-size: 110%;
     color: #fff;
-    margin-top: 1em;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    font-size: 85%;
+    margin: 0;
+    background: #1f8dd6;
+    /*background: #45b6a3;*/
 }
 
-.main .nav-list .nav-item a.pure-button-disabled {
-    pointer-events: none;
+/*.main {
+    margin: 1em;
+    margin-top: 26px;
+}*/
+#main {
+    left: 150px;
+    position: fixed;
+    top: 26px;
+    bottom: 0;
+    overflow-y: auto;
+    z-index: 999;
+}
+#main::-webkit-scrollbar { 
+    display: none; 
 }
 
-.main .nav-list .nav-item a#button_browse {
-    border-right: 1.5px solid rgb(176, 202, 219);
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px; 
-}
-
-.main .nav-list .nav-item a#button_history {
-    margin-left: -4.5px;
-    padding: 0.5em 0;    
-    border-left: 1.5px solid rgb(176, 202, 219);
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-}
-
-.main .nav-list .nav-item a:hover {
-    border: 2px solid rgb(61, 146, 201);
-    text-decoration: none;
-}
-
-.main .nav-list .nav-item a:hover#button_browse {
-    border-right: 1px solid rgb(61, 146, 201);
-}
-
-.main .nav-list .nav-item a:hover#button_history {
-    border-left: 1px solid rgb(61, 146, 201);
-}
-
-.main .nav-list .nav-item a:hover#button_start {
-    border: 2px solid #45c15a;
-}
-
-.main .nav-list .nav-item a:hover#button_stop {
-    border: 2px solid rgb(202, 60, 60);
-}
-
-.main .nav .pure-form h4 {
-    color: rgb(176, 202, 219);
-    text-align: left;
-    margin: 0.5em 0;
-}
-
-.main .nav .pure-form #span_workingDir{
-    font-weight: 400;
-    color: white;
-}
-
-.main .nav .nav-textarea {
-    width: 100%;
-    color: #EEE;
-    height: 125px;
-    resize: none;
-    background: #444;
-    box-shadow: none;
-    font-family: monospace;
-    border: 2px solid rgb(176, 202, 219);
-    -webkit-app-region: no-drag;
+.tab {
+    width: 1em;
 }
