--- a/clientTool/lib/css/main.css
+++ b/clientTool/lib/css/main.css
@@ -6,7 +6,7 @@ body {
     /*-webkit-app-region: drag;*/
 }
 
-
+/* TOOLBAR ***********************************************/
 .toolbar {
     width: 100%;
     height: 26px;
@@ -55,10 +55,10 @@ body {
     border-bottom-left-radius: 2px;
 }
 
-.toolbar h5 {
-    margin: 0;
-    margin-left: 1em;
-    padding: 0.4em 0 0 3em;
+.toolbar h6 {
+    margin-top: 2px;
+    margin-left: 4em;
+    padding: 0px 0 0 0;
 }
 
 .toolbar .pure-button.button-dev i {
@@ -67,52 +67,55 @@ body {
 }
 
 
-#layout {
-    padding-left: 150px;
-    left: 0;
-    position: relative;
-}
-
-#menu {
-    left: 150px;
-    margin-left: -150px;
-    width: 150px;
-    position: fixed;
+/*WINDOW AREA > Not toolbar*/
+.windowArea {
+    width: 100%;
+    /*background: #4db0c4;*/
+    background: #FFF;
+    position: absolute;
     top: 26px;
-    bottom: 0;
-    overflow-y: auto;
-    background: #232432;
-    z-index: 1000;
 }
 
-#menu::-webkit-scrollbar { 
-    display: none; 
-}
-
-p.pure-menu-heading {
-    font-size: 110%;
-    color: #fff;
-    margin: 0;
-    background: #1f8dd6;
-    /*background: #45b6a3;*/
-}
-
-/*.main {
-    margin: 1em;
-    margin-top: 26px;
-}*/
-#main {
-    left: 150px;
-    position: fixed;
+.windowArea .side-nav {
     top: 26px;
-    bottom: 0;
-    overflow-y: auto;
-    z-index: 999;
-}
-#main::-webkit-scrollbar { 
-    display: none; 
 }
 
-.tab {
-    width: 1em;
+
+/*Side Nav*/
+.button-collapse {
+    font-size: 2rem;
+    position: fixed;
+    padding: 0 10px;
+    background: rgba(15, 52, 89, 0.3);
+    display: none;
+}
+
+
+
+header, main, footer, .windowArea {
+    padding-left: 240px;
+}
+
+@media only screen and (max-width : 992px) {
+    header, main, footer, .windowArea {
+        padding-left: 0;
+    }
+
+    .button-collapse {
+        display: inline;
+    }
+}
+
+
+
+/*Content (right) Window*/
+
+.content {
+    color: black;
+    padding: 2rem;
+    padding-left: 3rem;
+}
+
+.json {
+      font-size: 1.2rem;
 }
