adds react-router and redux

--- a/client/src/components/Toolbar/toolbar.styl
+++ b/client/src/components/Toolbar/toolbar.styl
@@ -63,7 +63,7 @@
             }
 
             .lnr {
-                font-size: 28px;
+                font-size: 1.1em;
                 bottom: -1px;
             }
         }
